--- a/neo/templates/near.html
+++ b/neo/templates/near.html
@@ -135,7 +135,7 @@
                 nodes = [];
                 edges = [];
                 network = [];
-                $("#resulttitle").html(name+"的人际关系")
+                $("#resulttitle").html("<a href='"+"http://playbigdata.com/wwj/search2.aspx?q="+encodeURIComponent(name)+"&t='>"+name+"</a>"+"的人际关系")
                 var maxnear = $("#ex1").val();
                 snode = {id:name,label:name,color:{background:"#ff9966"}};
                 nodes.push(snode);
@@ -145,7 +145,7 @@
                     mr = 0
                 }
                 $.get("http://183.174.228.21:1241/find_near",{'pname':name,'maxnear':maxn,'mr':mr}, function(ret){
-                    str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped table-hover ' style='width:100%' id='mytable'><thead><th>姓名</th><th>亲密度</th></thead><tbody>";
+                    str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped table-hover ' style='width:100%' id='mytable'><thead><th>姓名</th><th>亲密度</th><th>时事探针</th></thead><tbody>";
                     if(ret.length==0){
                         alert("没有找到这个人的信息，输一个我知道的人吧！");
                         return ;
@@ -156,7 +156,8 @@
                         edge = {from:ret[i]['n.name'],to:ret[i]["end.name"],value:ret[i]["r.value"],title:ret[i]["r.value"]}
                         if(ret[i]['n.name'] == name){
                             nodes.push(node)
-                            str += "<tr class='mytr'><td>"+ ret[i]['end.name']+"</td>"+"<td>"+ret[i]["r.value"]+"</td>"+"</tr>"
+                            str += "<tr class='mytr'><td>"+ ret[i]['end.name']+"</td>"+"<td>"+ret[i]["r.value"]+"</td>"+"<td><a href='"+
+                                "http://playbigdata.com/wwj/search2.aspx?q="+encodeURIComponent(ret[i]['end.name'])+"&t='>链接</a>"+"</td>"+"</tr>"
                         }
                         edges.push(edge)
 
@@ -164,7 +165,7 @@
                     str += "</tbody></table>"
                     draw();
                     $("#result").html(str);
-                    $("#resulttitle").html(name+"的人际关系");
+                $("#resulttitle").html("<a href='"+"http://playbigdata.com/wwj/search2.aspx?q="+encodeURIComponent(name)+"&t='>"+name+"</a>"+"的人际关系")
                     var table = 
                     $('#mytable').DataTable({
                         "paging": true,
@@ -181,7 +182,7 @@
                         //"serverSide" : true,//服务器端进行分页处理的意思
                         //"bPaginate": true,
                         //"bProcessing": true
-                        columns : [{data : "id"},{data:"value"}],
+                        columns : [{data : "id"},{data:"value"},{data:"link"}],
                     });
                     $("#mytable tbody").on("mouseover","tr",function()
                     {//给tr或者td添加click事件
